@startuml
namespace ois_api_client #F7F7F7 {
    class BasicHeader {
    + request_id: str
    + timestamp: datetime
    - {static} request_version: str = '3.0'
    - {static} header_version: str = '1.0'
    }

    class BasicResult {
    + func_code: str
    + error_code: Optional[str]
    + message: Optional[str]
    + notifications: List[Notification]
    }

    class Software {
    + software_id: str
    + software_name: str
    + software_operation: SoftwareOperation
    + software_main_version: str
    + software_dev_name: str
    + software_dev_contact: str
    + software_dev_country_code: Optional[str]
    + softwareDevTaxNumber: Optional[str]
    }

    enum SoftwareOperation {
        LOCAL_SOFTWARE
        ONLINE_SERVICE
    }

    class TechnicalValidationResult {
    + validation_result_code: str
    + validation_error_code: str
    + message: str
    }

    class GeneralErrorResponse {
    + header: BasicHeader
    + result: BasicResult
    + software: Software
    + technical_validation_messages: List[TechnicalValidationResult]
    }

    GeneralErrorResponse "1" --* "1" BasicHeader
    GeneralErrorResponse "1" --* "1" BasicResult
    GeneralErrorResponse "1" --* "1" Software
    GeneralErrorResponse "1" --* "0..*" TechnicalValidationResult
    Software --- SoftwareOperation
}
@enduml